--- a/mapping/pom.xml
+++ b/mapping/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <version>3.10.1</version>
+        </dependency>
     </dependencies>
 </project>
